<resources>
    <string name="app_name">Calowry</string>
    <string name="text_home">Home</string>
    <string name="chart">Chart</string>
    <string name="add">add</string>
    <string name="meal">Meal</string>
    <string name="profile">Profile</string>
    <string name="chart_fragment">This is chart fragment</string>
    <string name="home_fragment">This is home fragment</string>
    <string name="meal_fragment">This is meal fragment</string>
    <string name="profile_fragment">This is profile fragment</string>
    <string name="welcome_message">Welcome to Calowry!!</string>
    <string name="choosing_message">Calowry, your personal meal tracker</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="login_message">Please fill your credentials below to access your account.</string>
    <string name="register_message">Please fill out the registration form below to create your account.</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="name_text">Name</string>
    <string name="not_have_account">Doesn’t have account?</string>
    <string name="already_have_account">Already have account?</string>
    <string name="register_here">Please register here</string>
    <string name="login_here">Login here</string>
    <string name="email_placeholder">youremail@google.com</string>
    <string name="password_placeholder">password</string>
    <string name="name_placeholder">your name</string>
    <string name="not_filled">Please insert your data</string>
    <string name="name_is_empty">Please insert your name</string>
    <string name="email_is_empty">Please insert your email</string>
    <string name="email_is_invalid">The Email is invalid</string>
    <string name="password_is_empty">Please insert your password</string>
    <string name="password_is_invalid">Password must more than 8 character</string>
    <string name="auth_is_invalid">Email or password incorrect</string>
    <string name="food_name">Please scan your food</string>
    <string name="this_food_has">This food has (p/100g) :</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbohydrates</string>
    <string name="sugar">Sugar</string>
    <string name="protein">Protein</string>
    <string name="zero_cal">0 Cal</string>
    <string name="zero_gram">0 gram</string>
    <string name="scan_your_food">Scan your food</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="potrait_mode">*Use portrait mode for the camera</string>
    <string name="hello_name">Hello, %1$s!</string>
    <string name="protein_consumed">Daily Protein Consumed</string>
    <string name="sugar_consumed">Daily Sugar consumed</string>
    <string name="fat_consumed">Daily Fat Consumed</string>
    <string name="carbs_consumed">Daily Carbohydrates Consumed</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_dialog_error">Oops something wrong</string>
    <string name="message_unknown_state">Unknown State</string>
    <string name="message_register_success">Register Success</string>
    <string name="try_again">No, I just checked</string>
    <string name="save_data">Yes, I will eat</string>
    <string name="how_many_grams_do_you_eat">How many grams do you eat?</string>
    <string name="last_saved_food_data">Last saved food data :</string>
    <string name="search_food">Search food :</string>
    <string name="select_and_save_the_food">Select and save the food.</string>
    <string name="calorie_analytics">Calorie Analytics</string>
    <string name="daily_based">Daily Based</string>
    <string name="message_logout_confirm">Are you sure want logout ?</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">No</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
</resources>