<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.project.calowry_app.ui.home.HomeFragment"
        android:label="@string/text_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.project.calowry_app.ui.chart.ChartFragment"
        android:label="@string/chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_meal"
        android:name="com.project.calowry_app.ui.meal.MealFragment"
        android:label="@string/meal"
        tools:layout="@layout/fragment_meal"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.project.calowry_app.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>