<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/bg_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#74000000"
        android:elevation="4dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/login_message"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/medium"
        android:text="@string/login_message"
        android:textColor="?attr/colorPrimary"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmailTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/regular"
        android:text="@string/email_text"
        android:textSize="16sp"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/EmailEditText"
        app:layout_constraintStart_toStartOf="@+id/EmailEditText" />

    <com.project.calowry_app.ui.customview.EmailEditText
        android:id="@+id/EmailEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="@font/regular"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="18dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


    <TextView
        android:id="@+id/tvPasswordTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/regular"
        android:text="@string/password_text"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/PasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/PasswordEditText" />

    <com.project.calowry_app.ui.customview.PasswordEditText
        android:id="@+id/PasswordEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="@font/regular"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:paddingHorizontal="18dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/bold"
        android:background="@drawable/bg_button_blue"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <LinearLayout
        android:id="@+id/layout_text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn">

        <TextView
            android:id="@+id/not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            android:fontFamily="@font/bold"/>

        <TextView
            android:id="@+id/register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:layout_marginStart="4dp"
            android:text="@string/register_here"
            android:fontFamily="@font/bold"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
